bpo-42986: Fix parser crash when reporting syntax errors in f-string with newlines (GH-24279)